fixed alignment issues

--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -10,10 +10,10 @@ body {
 #name {
   text-align: center;
   background-color: #4aaaa5;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  margin-left: 150px;
-  width: 150px;
+  /*padding-top: 20px;
+  padding-bottom: 20px;*/
+  margin-left: 250px;
+  width: 250px;
   color: white;
 }
 #namePortfolio {
@@ -39,24 +39,23 @@ ul {
   padding-bottom: 20px;
   margin-right: 100px;
 }
-.middle {
+.middleContainer {
   background-color: #C8C8C8;
-  padding: 100px;
-  border-bottom: 5px solid #4aaaa5;
+  padding: 100px 150px 100px 150px;
+}
+.middle {
+  background-color: #ffffff;
 }
 .middlePortfolio {
     background-color: #C8C8C8;
-    padding: 100px;
-    border-bottom: 5px solid #4aaaa5;
+    /*padding: 100px;*/
+    padding: 100px 150px 100px 150px;
 }
 .middleContact {
   background-color: #C8C8C8;
   padding: 100px;
-  border-bottom: 5px solid #4aaaa5;
 }
-.group {
-  background-color: #ffffff;
-}
+
 .groupPortfolio {
   background-color: #ffffff;
 }
@@ -66,7 +65,7 @@ ul {
 }
 img{
   width: 300px;
-  height: 300px;
+  height: 250px;
 }
 #portfolio img {
   width: 250px;
@@ -78,4 +77,5 @@ img{
 .bottom{
   background-color: #666666;
   padding-top: 30px;
+  border-top: 5px solid #4aaaa5;
 }
